@@ -1,4 +1,5 @@
 [CW2]
++ AddCommand dialog: allow to set icon.
 * SyncProxyAndroid SDK: fix AddCommand's setCmdIcon method.
 + Alert, ScrollableMessage, Show dialogs: allow to set soft buttons.
 * Set the current release version in the app's manifest to be displayed in system settings.
